name:                esqueleto-pgtrgm
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.9.0 && <4.13
                     , esqueleto >=2.5.3 && <2.8 || >=3.0.0 && <3.5
  exposed-modules:     Database.Esqueleto.Pgtrgm
